@@ -2,11 +2,12 @@ package com.hedera.hashgraph.seven_twenty_one.contract;
 
 import com.google.protobuf.InvalidProtocolBufferException;
 import com.hedera.hashgraph.sdk.*;
-import com.hedera.hashgraph.seven_twenty_one.contract.handler.FunctionHandler;
+import com.hedera.hashgraph.seven_twenty_one.contract.handler.*;
+import com.hedera.hashgraph.seven_twenty_one.contract.repository.TransactionRepository;
 import com.hedera.hashgraph.seven_twenty_one.proto.Function;
 import com.hedera.hashgraph.seven_twenty_one.proto.FunctionBody;
+import java.sql.SQLException;
 import java.time.Instant;
-import java.util.Collections;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
@@ -21,7 +22,23 @@ public final class TopicListener {
     );
 
     // map of incoming function case to the handler that will accept
-    private final Map<FunctionBody.DataCase, FunctionHandler<?>> functionHandlers = Collections.emptyMap();
+    private final Map<FunctionBody.DataCase, FunctionHandler<?>> functionHandlers = Map.ofEntries(
+        Map.entry(
+            FunctionBody.DataCase.CONSTRUCTOR,
+            new ConstructorFunctionHandler()
+        ),
+        Map.entry(FunctionBody.DataCase.APPROVE, new ApproveFunctionHandler()),
+        Map.entry(
+            FunctionBody.DataCase.SETAPPROVALFORALL,
+            new SetApprovalForAllFunctionHandler()
+        ),
+        Map.entry(FunctionBody.DataCase.MINT, new MintFunctionHandler()),
+        Map.entry(FunctionBody.DataCase.BURN, new BurnFunctionHandler()),
+        Map.entry(
+            FunctionBody.DataCase.TRANSFERFROM,
+            new TransferFromFunctionHandler()
+        )
+    );
 
     // the current state of the contract
     private final State state;
@@ -36,14 +53,18 @@ public final class TopicListener {
     @Nullable
     private SubscriptionHandle hederaSubscriptionHandle;
 
+    private final TransactionRepository transactionRepository;
+
     public TopicListener(
         State state,
         Client hederaClient,
-        TopicId hederaTopicId
+        TopicId hederaTopicId,
+        TransactionRepository transactionRepository
     ) {
         this.state = state;
         this.hederaClient = hederaClient;
         this.hederaTopicId = hederaTopicId;
+        this.transactionRepository = transactionRepository;
     }
 
     public synchronized void startListening() {
@@ -96,38 +117,12 @@ public final class TopicListener {
             Instant.ofEpochSecond(0, functionBody.getValidStartNanos())
         );
 
-        if (!expectedTransactionId.equals(topicMessage.transactionId)) {
-            // the transaction ID in the function body does not match the transaction ID that this
-            // function was submitted under
+        var transactionStatus = Status.OK;
+        var functionCaller = functionBody.getCaller();
 
-            // this is a protection against DUPLICATE transactions so we treat this as a true error
-
-            // TODO: throw new StatusException(Status.TRANSACTION_ID_MISMATCH);
-            return;
-        }
-
-        if (functionBody.getCaller().isEmpty()) {
-            // caller address we not set, immediately invalid
-            // FIXME: log this as an error
-            return;
-        }
-
-        var caller = Address.fromByteString(functionBody.getCaller());
-        var signature = function.getSignature().toByteArray();
-
-        // verify that the function body was signed by the declared caller
-        // this is protection against the integrity of the message and ensures that this is really tied with
-        // the caller
-
-        if (
-            !caller.publicKey.verify(
-                function.getBody().toByteArray(),
-                signature
-            )
-        ) {
-            // FIXME: log this as an error
-            return;
-        }
+        var maybeCaller = Optional
+            .ofNullable(functionCaller.isEmpty() ? null : functionCaller)
+            .map(Address::fromByteString);
 
         // get a function handler that matches the data case
         @SuppressWarnings("unchecked")
@@ -140,26 +135,72 @@ public final class TopicListener {
         // parse the function arguments from the protobuf data
         var functionArguments = functionHandler.parse(functionBody);
 
-        // validate the function arguments
-        // this will raise an exception that we need to handle and produce a failed function result
         try {
+            if (!expectedTransactionId.equals(topicMessage.transactionId)) {
+                // the transaction ID in the function body does not match the transaction ID that this
+                // function was submitted under
+
+                // this is a protection against DUPLICATE transactions so we treat this as a true error
+                throw new StatusException(Status.TRANSACTION_ID_MISMATCH);
+            }
+
+            if (maybeCaller.isEmpty()) {
+                // caller address we not set, immediately invalid
+                throw new StatusException(Status.CALLER_NOT_SET);
+            }
+
+            var caller = maybeCaller.get();
+            var signature = function.getSignature().toByteArray();
+
+            // verify that the function body was signed by the declared caller
+            // this is protection against the integrity of the message and ensures that this is really tied with
+            // the caller
+
+            if (
+                !caller.publicKey.verify(
+                    function.getBody().toByteArray(),
+                    signature
+                )
+            ) {
+                throw new StatusException(Status.INVALID_SIGNATURE);
+            }
+
+            // validate the function arguments
+            // this will raise an exception that we need to handle and produce a failed function result
             functionHandler.validate(state, caller, functionArguments);
+
+            // acquire a lock to update our state
+            // we do this to block a snapshot from happening in the middle of
+            // a state update
+            state.lock();
+
+            try {
+                // finally, call the function
+                functionHandler.call(state, caller, functionArguments);
+            } finally {
+                // release our state lock so that a snapshot may now happen
+                state.unlock();
+            }
         } catch (StatusException e) {
-            // FIXME: log this transaction as an error
-            return;
+            transactionStatus = e.status;
         }
 
-        // acquire a lock to update our state
-        // we do this to block a snapshot from happening in the middle of
-        // a state update
-        state.lock();
+        // state has now transitioned
+        state.setTimestamp(topicMessage.consensusTimestamp);
 
         try {
-            // finally, call the function
-            functionHandler.call(state, caller, functionArguments);
-        } finally {
-            // release our state lock so that a snapshot may now happen
-            state.unlock();
+            // persist the transaction to our database
+            transactionRepository.put(
+                topicMessage.consensusTimestamp,
+                maybeCaller.orElse(null),
+                topicMessage.transactionId,
+                transactionStatus,
+                functionBody.getDataCase(),
+                functionArguments
+            );
+        } catch (SQLException e) {
+            // re-raise as unchecked to propagate up and terminate the process
+            throw new RuntimeException(e);
         }
     }
 }
